changes in spec
