# swagger_server/models/user_info_sans_pwd.py
@@ -14,40 +14,37 @@ class UserInfoSansPwd(Model):
 
     Do not edit the class manually.
     """
-    def __init__(self, user_name: str=None, first_name: str=None, last_name: str=None, email: str=None, phone: str=None):  # noqa: E501
+    def __init__(self, user_name: str=None, email: str=None, phone_number_number: str=None,role: str=None):  # noqa: E501
         """UserInfoSansPwd - a model defined in Swagger
 
         :param user_name: The user_name of this UserInfoSansPwd.  # noqa: E501
         :type user_name: str
-        :param first_name: The first_name of this UserInfoSansPwd.  # noqa: E501
-        :type first_name: str
+        :param role: The role of this UserInfoSansPwd.  # noqa: E501
+        :type role: str
         :param last_name: The last_name of this UserInfoSansPwd.  # noqa: E501
         :type last_name: str
         :param email: The email of this UserInfoSansPwd.  # noqa: E501
         :type email: str
-        :param phone: The phone of this UserInfoSansPwd.  # noqa: E501
-        :type phone: str
+        :param phone_number: The phone_number of this UserInfoSansPwd.  # noqa: E501
+        :type phone_number: str
         """
         self.swagger_types = {
             'user_name': str,
-            'first_name': str,
-            'last_name': str,
+            'role': str,
             'email': str,
-            'phone': str
+            'phone_number_number': str
         }
 
         self.attribute_map = {
             'user_name': 'user_name',
-            'first_name': 'first_name',
-            'last_name': 'last_name',
+            'role': 'role',
             'email': 'email',
-            'phone': 'phone'
+            'phone_number': 'phone_number'
         }
         self._user_name = user_name
-        self._first_name = first_name
-        self._last_name = last_name
+        self._role = role
         self._email = email
-        self._phone = phone
+        self._phone_number_number = phone_number_number
 
     @classmethod
     def from_dict(cls, dikt) -> 'UserInfoSansPwd':
@@ -84,48 +81,48 @@ class UserInfoSansPwd(Model):
         self._user_name = user_name
 
     @property
-    def first_name(self) -> str:
-        """Gets the first_name of this UserInfoSansPwd.
+    def role(self) -> str:
+        """Gets the role of this UserInfoSansPwd.
 
 
-        :return: The first_name of this UserInfoSansPwd.
+        :return: The role of this UserInfoSansPwd.
         :rtype: str
         """
-        return self._first_name
+        return self._role
 
-    @first_name.setter
-    def first_name(self, first_name: str):
-        """Sets the first_name of this UserInfoSansPwd.
+    @role.setter
+    def role(self, role: str):
+        """Sets the role of this UserInfoSansPwd.
 
 
-        :param first_name: The first_name of this UserInfoSansPwd.
-        :type first_name: str
+        :param role: The role of this UserInfoSansPwd.
+        :type role: str
         """
-        if first_name is None:
-            raise ValueError("Invalid value for `first_name`, must not be `None`")  # noqa: E501
+        if role is None:
+            raise ValueError("Invalid value for `role`, must not be `None`")  # noqa: E501
 
-        self._first_name = first_name
+        self._role = role
 
-    @property
-    def last_name(self) -> str:
-        """Gets the last_name of this UserInfoSansPwd.
-
-
-        :return: The last_name of this UserInfoSansPwd.
-        :rtype: str
-        """
-        return self._last_name
-
-    @last_name.setter
-    def last_name(self, last_name: str):
-        """Sets the last_name of this UserInfoSansPwd.
+    # @property
+    # def last_name(self) -> str:
+    #     """Gets the last_name of this UserInfoSansPwd.
 
 
-        :param last_name: The last_name of this UserInfoSansPwd.
-        :type last_name: str
-        """
+    #     :return: The last_name of this UserInfoSansPwd.
+    #     :rtype: str
+    #     """
+    #     return self._last_name
 
-        self._last_name = last_name
+    # @last_name.setter
+    # def last_name(self, last_name: str):
+    #     """Sets the last_name of this UserInfoSansPwd.
+
+
+    #     :param last_name: The last_name of this UserInfoSansPwd.
+    #     :type last_name: str
+    #     """
+
+    #     self._last_name = last_name
 
     @property
     def email(self) -> str:
@@ -151,24 +148,24 @@ class UserInfoSansPwd(Model):
         self._email = email
 
     @property
-    def phone(self) -> str:
-        """Gets the phone of this UserInfoSansPwd.
+    def phone_number(self) -> str:
+        """Gets the phone_number of this UserInfoSansPwd.
 
 
-        :return: The phone of this UserInfoSansPwd.
+        :return: The phone_number of this UserInfoSansPwd.
         :rtype: str
         """
-        return self._phone
+        return self._phone_number
 
-    @phone.setter
-    def phone(self, phone: str):
-        """Sets the phone of this UserInfoSansPwd.
+    @phone_number.setter
+    def phone_number(self, phone_number: str):
+        """Sets the phone_number of this UserInfoSansPwd.
 
 
-        :param phone: The phone of this UserInfoSansPwd.
-        :type phone: str
+        :param phone_number: The phone_number of this UserInfoSansPwd.
+        :type phone_number: str
         """
-        if phone is None:
-            raise ValueError("Invalid value for `phone`, must not be `None`")  # noqa: E501
+        if phone_number is None:
+            raise ValueError("Invalid value for `phone_number`, must not be `None`")  # noqa: E501
 
-        self._phone = phone
+        self._phone_number = phone_number
